--- a/src/styles/globals.module.css
+++ b/src/styles/globals.module.css
@@ -1,14 +1,4 @@
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
+@import "./variables.css";
 
 html,
 body {
@@ -19,15 +9,9 @@ body {
 body {
   color: var(--foreground);
   background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: var(--font-primary);
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}
-
-* {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
 }
 
 a {
@@ -35,6 +19,7 @@ a {
   text-decoration: none;
 }
 
+/* 🌙 Dark Mode Styling */
 @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
