--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -10,10 +10,10 @@
 }
 
 body {
-  font-family:  "InterVariable", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+  font-family:  InterVariable, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
   font-optical-sizing: none;
   font-variation-settings: "opsz" 28, "wght" 400;
-  font-feature-settings: "liga" 1, "calt" 1;
+  font-feature-settings: 'liga' 1, 'calt' 1;
   font-variant-ligatures: common-ligatures discretionary-ligatures;
   text-rendering: optimizeLegibility;
   line-height: 1.2;
@@ -32,13 +32,13 @@ a {
 
 @media (max-width: 1024px) {
   body {
-    padding: 1rem;
+    padding: 0.5rem;
   }
 }
 
 @media (max-width: 768px) {
   body {
-    padding: 0.5rem;
+    padding: 0.2rem;
   }
 }
 
