--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -12,17 +12,17 @@
 body {
   font-family:  InterVariable, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
   font-optical-sizing: none;
-  font-variation-settings: "opsz" 28, "wght" 400;
+  font-variation-settings: "opsz" 32, "wght" 400;
   font-feature-settings: 'liga' 1, 'calt' 1;
   font-variant-ligatures: common-ligatures discretionary-ligatures;
   text-rendering: optimizeLegibility;
   line-height: 1.2;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  margin: 2rem;
   max-width: 100vw;
   color: var(--foreground);
   background: var(--background);
+  margin: var(--margin-big);
 }
 
 a {
