--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -5,7 +5,9 @@
   --text-color: #222;
 
   --margin-big: 3rem;
-  
+  --sidebar-offset: 3rem; /* e.g., equals your var(--margin-big) */
+  --sidebar-width: 200px;
+  --background: #f0f0f0; /* Example background color for sidebar */
 
   /* Category Colors */
   --graphic-design: #71c9ce;
