--- a/src/styles/ui/row.module.css
+++ b/src/styles/ui/row.module.css
@@ -2,7 +2,7 @@
     display: grid;
     grid-template-columns: minmax(80px, 10%) minmax(100px, 12%) 1fr minmax(150px, 20%) minmax(100px, 15%);
     align-items: center;
-    padding: 0.75rem 0rem;
+    padding: var(--row-padding);
     border-bottom: 1px solid var(--line);
 }
 
@@ -11,7 +11,7 @@
     display: grid;
     grid-template-columns: minmax(80px, 10%) minmax(100px, 12%) 1fr  ;/* Type and Title */
     align-items: center;
-    padding: 0.75rem 0rem;
+    padding: var(--row-padding);
     border-bottom: 1px solid var(--line);
 }
   
