--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -16,7 +16,7 @@ body {
   font-feature-settings: 'liga' 1, 'calt' 1;
   font-variant-ligatures: common-ligatures discretionary-ligatures;
   text-rendering: optimizeLegibility;
-  line-height: 1.2;
+  line-height: 1.3;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   max-width: 100vw;
@@ -32,6 +32,11 @@ a {
 
 p {
   font-size: var(--small);
+}
+
+hr {
+  border: 0;
+  border-bottom: 1px solid var(--line);
 }
 
 @media (max-width: 1024px) {
