--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -22,6 +22,7 @@
   --xxl:calc(90rem/ 16);
 
   /* Category Colors */
+  --blue: #007bff;
   --backend: #ff5733;
   --graphic-design: #67D9FF;
   --systems-devops: #FFEE00;
