--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -2,48 +2,71 @@
 /* 🌍 Global Variables */
 :root {
   /* Light Mode */
-  --background: #f0f0f0;
-  --foreground: #171717;
-  --text-color: #222;
-  --line: #ddd;
+  --color-background: #fcfcfc;
+  --color-foreground: #171717;
+  --color-text: #222;
+  --color-line: #ddd;
 
-  /* Spaces*/
-  --margin-big: 2rem;
-  --sidebar-offset: 2rem; /* Matches margin for alignment */
-  --sidebar-width: 200px;
-  --row-padding: 0.7rem 0rem;
+   /* Spacing */
+  --space-xxs: 0.125rem;
+  --space-xs: 0.25rem;
+  --space-sm: 0.5rem;
+  --space-md: 1rem;
+  --space-lg: 2rem;
+  --space-xl: 3rem;
+  --space-xxl: 4rem;
+  --space-sidebar: 200px;
 
   /* Font sizes */
-  --xs: calc(12rem/ 16);
-  --small: calc(14rem/ 16);
-  --medium: calc(17rem/ 16);
-  --large: calc(25rem/ 16);
-  --xl: 48px;
-  --xxl:calc(90rem/ 16);
+  --font-xs: calc(12rem/ 16);
+  --font-sm: calc(14rem/ 16);
+  --font-md: calc(17rem/ 16);
+  --font-lg: calc(25rem/ 16);
+  --font-xl: 48px;
+  --font-xxl:calc(90rem/ 16);
 
-  /* Category Colors */
-  --blue: #007bff;
-  --backend: #ff5733;
-  --graphic-design: #67D9FF;
-  --systems-devops: #FFEE00;
-  --artwork: #FF94F1;
-  --frontend: #7EFF27;
-  --writing: #3300AA;
-  --data-ai: #9922FF;
+  /* Border Radius */
+  --radius-sm: 4px;
+  --radius-md: 8px;
+  --radius-lg: 16px;
+
+  /* Transitions */
+  --transition-fast: 0.2s ease-in-out;
+  --transition-normal: 0.3s ease-in-out;
+  --transition-slow: 0.5s ease-in-out;
+
+  /* Shadows */
+  --shadow-xs: 0 1px 2px rgba(0, 0, 0, 0.1);
+  --shadow-sm: 0 2px 4px rgba(0, 0, 0, 0.1);
+  --shadow-md: 0 4px 8px rgba(0, 0, 0, 0.1);
+  --shadow-lg: 0 8px 16px rgba(0, 0, 0, 0.1);
+
+  /* Brand Colors */
+  --brand-primary: #007bff;
+  --brand-backend: #ff5733;
+  --brand-design: #67D9FF;
+  --brand-devops: #FFEE00;
+  --brand-artwork: #FF94F1;
+  --brand-frontend: #7EFF27;
+  --brand-writing: #3300AA;
+  --brand-data: #9922FF;
 }
 
-/* Font Support */
 @supports (font-variation-settings: normal) {
   :root {
     font-family: InterVariable, sans-serif;
   }
 }
 
-/* 🌙 Dark Mode */
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-    --text-color: #ddd;
+    --color-background: #0a0a0a;
+    --color-foreground: #ededed;
+    --color-text: #ddd;
+
+    --shadow-xs: 0 1px 2px rgba(255, 255, 255, 0.05);
+    --shadow-sm: 0 2px 4px rgba(255, 255, 255, 0.05);
+    --shadow-md: 0 4px 8px rgba(255, 255, 255, 0.05);
+    --shadow-lg: 0 8px 16px rgba(255, 255, 255, 0.05);
   }
 }
