--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -15,15 +15,17 @@
   --space-lg: 2rem;
   --space-xl: 3rem;
   --space-2xl: 4rem;
-  --space-sidebar: 200px;
+  --space-3xl: 5rem;
+  --space-sidebar: 150px;
 
   /* Font sizes */
+  --font-xxs: calc(10rem/ 16);
   --font-xs: calc(12rem/ 16);
   --font-sm: calc(13rem/ 16);
   --font-md: calc(17rem/ 16);
   --font-lg: calc(25rem/ 16);
   --font-xl: 48px;
-  --font-2xl:calc(90rem/ 16);
+  --font-2xl:calc(91rem/ 16);
 
   /* Border Radius */
   --radius-sm: 4px;
