--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -12,7 +12,7 @@
 body {
   font-family:  InterVariable, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
   font-optical-sizing: none;
-  font-variation-settings: "opsz" 32, "wght" 450;
+  font-variation-settings: var(--var-lg);
   font-feature-settings: 'liga' 1, 'calt' 1;
   font-variant-ligatures: common-ligatures discretionary-ligatures;
   text-rendering: optimizeLegibility;
@@ -26,7 +26,7 @@ body {
 
 p {
   font-size: var(--font-sm);
-  font-variation-settings: "opsz" 20, "wght" 450;
+  font-variation-settings: var(--var-sm);
 }
 
 hr {
@@ -41,7 +41,7 @@ a {
   color: inherit;
   text-decoration: none;
   font-size: var(--font-sm);
-  font-variation-settings: "opsz" 20, "wght" 450;
+  font-variation-settings: var(--var-sm);
   transition: color var(--transition-fast);
   position: relative;
 }
