feat:  clock render only in client

--- a/src/styles/about/clock.module.css
+++ b/src/styles/about/clock.module.css
@@ -41,7 +41,7 @@
 }
 
 .secondHand {
-  stroke: var(--brand-data);
+  stroke: var(--brand-red);
   stroke-width: 1;
   transition: transform 0.1s linear;
 }
