--- a/src/styles/about/notifications.module.scss
+++ b/src/styles/about/notifications.module.scss
@@ -20,6 +20,7 @@ $max-z: 20;
 
     /* Animate between a small height and a larger one */
     max-height: 7rem;
+    min-height: 7rem;
     /* Collapsed: show top card (and part of next) */
     overflow: hidden;
     transition: max-height 0.5s ease;
@@ -30,7 +31,7 @@ $max-z: 20;
 
     &.collapsed {
         .notificationCard {
-            margin-bottom: -3.9rem;
+            margin-bottom: -4rem;
             transform: translateY(0);
             opacity: 1;
 
