--- a/src/styles/about/notifications.module.scss
+++ b/src/styles/about/notifications.module.scss
@@ -116,9 +116,13 @@ $max-z: 20;
     backdrop-filter: blur(22px);
     -webkit-backdrop-filter: blur(22px);
     transition:
-        margin-bottom 0.4s cubic-bezier(0.02, 0.3, 0.26, 0.3),
-        transform 0.4s ease-in-out,
-        opacity 0.5s ease-in-out;
+        margin-bottom 0.4s cubic-bezier(0.25, 0.1, 0.25, 1),
+        transform 0.4s cubic-bezier(0.25, 0.1, 0.25, 1),
+        opacity 0.4s cubic-bezier(0.25, 0.1, 0.25, 1);
+    
+    /* Safari transition ptimisation */
+    will-change: transform, opacity;
+    transform: translate3d(0, 0, 0);
 }
 
 .notificationCard::before {
