--- a/src/styles/about/clock.module.css
+++ b/src/styles/about/clock.module.css
@@ -17,7 +17,7 @@
 }
 
 .clockOutline {
-  stroke: var(--color-line);
+  stroke: var(--color-foreground);
   stroke-width: 1;
   fill: var(--color-background);
 }
