--- a/src/styles/ui/menu.module.css
+++ b/src/styles/ui/menu.module.css
@@ -1,79 +1,68 @@
 .menuContainer {
     position: fixed;
-    top: var(--space-lg);
-    left: var(--space-lg);
-    right: var(--space-lg);
-    width: calc(var(--space-sidebar) - var(--space-lg) * 0.75); /* Sidebar width */
+    top: 0;
+    left: 0;
+
+    overflow: hidden;
+    z-index: 50;
+    width: calc(var(--space-sidebar) - var(--space-lg) + var(--space-lg));
     max-width: 100%;
     z-index: 50;
-    height: 20px;
-    background-color: var(--brand-pink);
-    padding: 7px 12px;
-    transition: transform 0.3s ease-in-out; /* Smooth hide/show */
+
+    background: linear-gradient(var(--color-background) 45%,
+            var(--color-background-07) 75%,
+            transparent 100%);
+
+    max-height: 100px;
+    min-height: 90px;
+    transition: max-height 3s ease-in-out;
+
+    padding: 0 var(--space-lg);
+    padding-top: var(--space-lg);
 }
 
-.hidden {
-    transform: translateY(-200%); /* Moves it out of view */
+.menuContainer.expanded {
+    max-height: 300px;
+    min-height: 200px;
 }
-
 
 .menuBar {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  cursor: pointer;
-  font-weight: bold;
-  transition: background-color 0.3s;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    cursor: pointer;
 }
 
-.menuBar:hover {
-  background-color: transparent;
-}
-
-.icon {
-  margin-left: auto;
+.menuText {
+    margin-right: auto;
+    font-size: calc(1.2 *var(--font-lg));
+    font-variation-settings: var(--var-lg);
 }
 
 .rightIcons {
-  display: flex;
-  gap: 10px;
-  margin-left: 10px;
+    display: flex;
+    gap: 10px;
 }
 
 .menuDropdown {
-  background: white;
-  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
-  padding: 15px;
-}
-
-.menuDropdown {
-    position: absolute;
-    top: 100%;
-    left: 0;
-    width: 100%;
-    background: white;
-    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
-    padding: 15px;
-    z-index: 100;
+    margin-top: 0;
 }
 
 .menuDropdown a {
-  display: block;
-  text-decoration: none;
-  color: black;
-  padding: 5px 0;
-}
-
-.menuDropdown hr {
-  margin: 10px 0;
+    font-size: calc(1.2 *var(--font-lg));
+    display: block;
+    text-decoration: none;
+    color: var(--color-foreground);
+    font-variation-settings: var(--var-lg);
 }
 
 
 @media (max-width: 768px) {
     .menuContainer {
-        width: calc(100% - var(--space-sm) * var(--space-sm)); /* Respect left/right spacing */
-        top: var(--space-md);
+        width: calc(100% - var(--space-sm) * var(--space-sm));
+        top: 0;
         left: var(--space-md);
-        right: var(--space-md); /* Now applies correctly */
+        right: var(--space-md);
     }
-  }
+
+}
