fix: clock safari width issue

--- a/src/styles/about/clock.module.css
+++ b/src/styles/about/clock.module.css
@@ -7,7 +7,9 @@
   color: var(--color-text);
   height: auto;
   width: fit-content;
-  min-width: 55px;
+  width: -moz-fit-content;
+  width: -webkit-fit-content;
+  min-width: 57px;
   position: relative;
 }
 
