--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -69,6 +69,11 @@ a:hover::after {
   /* transform: translateY(-4px); */
 }
 
+.icon {
+    width: 100%;
+    height: 100%;
+}
+
 @media (max-width: 1024px) {
 
 }
