--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -53,7 +53,7 @@
   /* Brand Colors */
   --brand-grey: #787880;
   --brand-grey-rgb: 120, 120, 128;
-  --brand-blue: #007bff;
+  --brand-blue: #007AFF;
   --brand-red: #ff5733;
   --brand-turquoise: #67D9FF;
   --brand-yellow: #FFEE00;
