--- a/src/styles/about/clock.module.css
+++ b/src/styles/about/clock.module.css
@@ -4,7 +4,7 @@
   grid-template-rows: 1fr;
   align-items: center;
   justify-content: end;
-  color: var(--color-text);
+  color: var(--color-foreground);
   height: auto;
   width: fit-content;
   width: -moz-fit-content;
@@ -21,6 +21,7 @@
   text-align: center;
   grid-column: 1 / -1;
   grid-row: 1 / -1;
+  color: var(--color-foreground);
 }
 
 .digitalTime {
