--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -54,6 +54,7 @@
   --brand-grey: #787880;
   --brand-grey-rgb: 120, 120, 128;
   --brand-blue: #007AFF;
+  --brand-blue-rgb: 0, 122, 255;
   --brand-red: #ff5733;
   --brand-turquoise: #67D9FF;
   --brand-yellow: #FFEE00;
