--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -69,6 +69,19 @@ a:hover::after {
   /* transform: translateY(-4px); */
 }
 
+h3 a {
+    font-size: inherit;
+    font-variation-settings: inherit;
+    color: var(--color-foreground);
+    text-decoration: inherit;
+}
+
+h3 a::after {
+  width: 20px;
+  height: 20px;
+  margin-top: 2px;
+}
+
 @media (max-width: 1024px) {
 
 }
